[package]
name = "cgmath-std140"
version = "0.2.0"
description = "Bridge crate that provides conversion from `cgmath` types to `std140` types."
keywords = ["std140", "conversion"]
authors = ["RSSchermer <roland0507@gmail.com>"]
repository = "https://github.com/RSSchermer/cgmath-std140.rs"
homepage = "https://github.com/RSSchermer/cgmath-std140.rs"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
cgmath = "0.17.0"
std140 = "0.1.2"
